# impact-agent

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  ROADMAP.md  V1_BRANCH_REVIEW.md
skills/frontend-impact-search/: SKILL.md
skills/frontend-impact-search/agents/: openai.yaml
skills/frontend-impact-search/references/: ast-patterns.md  search-patterns.md
skills/frontend-impact-search/scripts/: local_search.py  ts_ast_extract.mjs
src/impact_agent/: __init__.py  cli.py  config.py
src/impact_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/impact_agent/api/: app.py
src/impact_agent/indexer/: __init__.py  filters.py  scanner.py  service.py  store.py  structure_extractor.py  symbol_extractor.py  vector_store.py
src/impact_agent/memory/: __init__.py  store.py
src/impact_agent/models/: analysis.py  common.py  evidence.py  history.py  impact.py  index.py  llm.py  report.py  request.py  search.py  state.py  tool.py  web.py
src/impact_agent/policies/: risk.py  (+1 more)
tests/fixtures/: local_field_rename_prompt.txt  local_field_rename_request.json
tests/unit/: test_analysis.py  test_api.py  test_assessment_service.py  test_cli.py  test_code_search.py  test_config.py  test_context_review.py  test_field_rename_strategy.py  test_filters.py  test_framework_analyzers.py  test_frontend_impact_skill.py  test_frontend_search.py  test_index_service.py  test_intake.py  test_llm_config.py  test_local_code_source.py  test_memory_store.py  test_ollama_provider.py  test_report_builder.py  test_runner.py  test_structure_extractor.py  test_symbol_extractor.py  test_web_app.py
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue  App.vue.js  style.css
(+39 files in other folders)
